add 'moments' project

--- a/index.html
+++ b/index.html
@@ -141,6 +141,18 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-6">
+                <div class="card mb-4 shadow-sm">
+                    <img src="./imgs/event_management_project.png" class="card-img-top" alt="event_management_project">
+                    <div class="card-body">
+                        <h5 class="card-title">Event Management</h5>
+                        <p class="card-text">This project shows my skills improvement.
+                            I used Bootstrap studio to build this project.
+                        </p>
+                        <a href="https://github.com/MohamedHassan2004/Event-Management-Website" target="_blank" class="btn btn-primary">View Project</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -178,7 +190,7 @@
         document.addEventListener("DOMContentLoaded", function() {
             var navbar = document.querySelector('.navbar');
             function updateNavbarStyle() {
-                if (window.scrollY < window.innerHeight / 2) {
+                if (window.scrollY < window.innerHeight / 1.5) {
                     navbar.classList.add('navbar-transparent');
                     navbar.classList.remove('navbarB-main');
                 } else {
